Fixed sizing issues on smaller devices index only

--- a/style/index.css
+++ b/style/index.css
@@ -438,34 +438,63 @@ footer a {
 
 @media only screen and (max-width: 890px) {
     html, body {
-        font-size: 75%;
+        font-size: 50%;
     }
 
     nav {
-        align-items: center;
+        width: 0vw;
+        height: 100vh;
+        
+        background-color: #5c5c5c;
+        color: #ffffff;
+        display: flex;
+        flex-flow: column nowrap;
+        position: absolute;
+        right: 0;
+        left: 100%;
+        box-shadow: 0 0 10px #acacac34;
+        z-index: 2;
+        transition: .4s ease-out;
     }
-    nav img {
-        height: auto;
-        width: 10%;
-    }
-
-    nav ul{
-        justify-content: center;
-    }
-
-    .nav-links {
-        flex-basis: 90%;
-        justify-content: flex-end;
-    }
-
-    .navLinksCont {
-        font-size: 1rem;
+    
+    .show {
+        width: 20vw;
+        left: 80%;
     }
 
     .viewport-header .text-container {
         margin: 0 5%;
     }
     
+    .top-bar {
+        display: flex;
+        flex-flow: row nowrap;
+        width: 100vw;
+        height: 20vw;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0 10%;
+        
+    }
+    
+    .top-bar #logo {
+        width: 20%;
+        border-radius: 50%;
+    }
+    
+    .burger {
+        margin-left: 25%;
+        margin-right: 0;
+        display: inline-block;
+        cursor: pointer;
+        z-index: 3;
+        transition: .5s;
+    }
+    
+    .change .burger {
+        margin-right: 20%;
+    }
+
     .viewport-header h1 {
         overflow: visible; 
         border-right: none;
@@ -474,10 +503,31 @@ footer a {
         animation: none;
     }
 
+    .viewport-header p {
+        display: flex;
+        flex-flow: column;
+    } 
+
+    .dash {
+        display: none;
+    }
+
+    .viewport-header a {
+        position: relative;
+        font-size: 2.5rem;
+        margin: 2% auto;
+        text-decoration: none;
+        color: white;
+        width: 80%;
+        text-align: center;
+        align-self: flex-end;
+    }
+
     #section-wrapper {
         flex-flow: column wrap;
     }
 
+    
     .project-icon {
         margin: 1%;
         width: 80%;
@@ -489,5 +539,70 @@ footer a {
         flex-direction: column;
         justify-content: flex-start;
         align-items: center;
+    }
+
+    .project-img {
+        width: 92%;
+        min-width: auto;
+        min-height: 125px;
+        margin: 3% auto;
+        display: flex;
+    }
+
+    footer {
+        width: 100vw;
+        min-height: 20vh;
+        text-align: center;
+        background-color: #dddddd;
+        box-shadow: 0 0 10px #2b2b2b;
+        display: flex;
+        padding: 0 1%;
+        flex-flow: column nowrap;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+    .copy {
+        flex: none;
+    }
+    
+    footer .social {
+        display: flex;
+        flex-flow: row;
+        align-items: center;
+        flex: none;
+        justify-content: space-evenly;
+    }
+    
+    .footer-nav {
+        flex: none;
+    }
+}
+
+@media only screen and ( max-width: 270px ) {
+    .viewport-header h1, h2, h3, .viewport-header p, p {
+        margin: 0 auto;
+        font-size: 1rem;
+        text-align: center;
+    }
+    
+    .viewport-header p {
+        text-align: center;
+        font-size: 1.3rem;
+        display: flex;
+        flex-flow: column;
+    } 
+
+    .dash {
+        display: none;
+    }
+    
+    .viewport-header a {
+        font-size: 1rem;
+    }
+    footer {
+        min-height: 60vh;
+    }
+    footer .social {
+        flex-flow: column;
     }
 }
